<resources>
    <string name="app_name">FinalProject</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="input">Input</string>
    <string name="run_ner">Run</string>
    <string name="result">"Result "</string>
    <string name="input_ids">Input Ids</string>
    <string name="class_label">Class Label</string>
    <string name="tokenized">Tokenized Input</string>
    <string name="class_id">Class Id</string>
    <string name="classification_result">Classification Result</string>
    <string name="orang">Orang</string>
    <string name="produk">Produk</string>
    <string name="lokasi">Lokasi</string>
    <string name="uang">Uang</string>
    <string name="organisasi">Organisasi</string>
</resources>